--- a/views/layouts/studentMenu.ejs
+++ b/views/layouts/studentMenu.ejs
@@ -1,18 +1,16 @@
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-3 mb-4">
+<div class="py-2 mb-2">
         
-        <div class="fs-5 py-1 px-3 shadow-sm"> <i class="fas fa-user-circle greenColor fs-5"></i> <%= capitalizeFirstLetter(username) %> </div>
+        <div class="fs-5 py-1 px-3 border-bottom"> <i class="fas fa-user-circle greenColor fs-5"></i> Hi, <%= capitalizeFirstLetter(username) %> </div>
         
-       
-        <div class="btn-toolbar mb-2 mb-md-0">
+</div>
+
+<div class="d-flex justify-content-between mb-2">
           
         <!-- Button trigger modal -->
-            <a href="computer/<%= studentId %>" class="text-primary"> <button type="button" class="btn btn-sm btn-outline-primary me-1"> Pro & Fee </button></a>
+            <a href="computer/<%= studentId %>" class="text-primary"> <button type="button" class="btn btn-sm btn-outline-primary me-1"> Your Profile & Fee </button></a>
             
             <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Lessons
+              Learn Lessons
             </button>
           
-        </div>
-
-        
-      </div>
+</div>
