--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -33,7 +33,7 @@
               
               <td colspan="3" class="fw-bold fs-5 bgColor bg-light border text-center">
                   
-                  <i class="fas fa-clock bgColor"></i> Your latest record </td>
+                  <i class="fas fa-clock text-dark"></i> Your latest record </td>
               
             </tr>
             
@@ -60,11 +60,11 @@
             
            <tr>
               
-             <td class="text-center border"><%= thisStudent.assignmentTheory[(thisStudent.assignmentTheory.length) - 1].subjectName %></td>
+             <td class="text-center text-muted border"><%= thisStudent.assignmentTheory[(thisStudent.assignmentTheory.length) - 1].subjectName %></td>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory[(thisStudent.assignmentTheory.length) - 1].chapterName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory[(thisStudent.assignmentTheory.length) - 1].chapterName %></td>
               
-              <td class="text-center border"><%= convertDate(thisStudent.assignmentTheory[(thisStudent.assignmentTheory.length) - 1].dateSubmitted) %></td>
+              <td class="text-center text-muted border"><%= convertDate(thisStudent.assignmentTheory[(thisStudent.assignmentTheory.length) - 1].dateSubmitted) %></td>
               
             </tr>
         
@@ -76,11 +76,11 @@
             
            <tr>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory102[(thisStudent.assignmentTheory102.length) - 1].subjectName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory102[(thisStudent.assignmentTheory102.length) - 1].subjectName %></td>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory102[(thisStudent.assignmentTheory102.length) - 1].chapterName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory102[(thisStudent.assignmentTheory102.length) - 1].chapterName %></td>
               
-              <td class="text-center border"><%= convertDate(thisStudent.assignmentTheory102[(thisStudent.assignmentTheory102.length) - 1].dateSubmitted) %></td>
+              <td class="text-center text-muted border"><%= convertDate(thisStudent.assignmentTheory102[(thisStudent.assignmentTheory102.length) - 1].dateSubmitted) %></td>
               
             </tr>
         
@@ -94,11 +94,11 @@
             
            <tr>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory103[(thisStudent.assignmentTheory103.length) - 1].subjectName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory103[(thisStudent.assignmentTheory103.length) - 1].subjectName %></td>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory103[(thisStudent.assignmentTheory103.length) - 1].chapterName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory103[(thisStudent.assignmentTheory103.length) - 1].chapterName %></td>
               
-              <td class="text-center border"><%= convertDate(thisStudent.assignmentTheory103[(thisStudent.assignmentTheory103.length) - 1].dateSubmitted) %></td>
+              <td class="text-center text-muted border"><%= convertDate(thisStudent.assignmentTheory103[(thisStudent.assignmentTheory103.length) - 1].dateSubmitted) %></td>
               
             </tr>
         
@@ -109,11 +109,11 @@
             
            <tr>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory104[(thisStudent.assignmentTheory104.length) - 1].subjectName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory104[(thisStudent.assignmentTheory104.length) - 1].subjectName %></td>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory104[(thisStudent.assignmentTheory104.length) - 1].chapterName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory104[(thisStudent.assignmentTheory104.length) - 1].chapterName %></td>
               
-              <td class="text-center border"><%= convertDate(thisStudent.assignmentTheory104[(thisStudent.assignmentTheory104.length) - 1].dateSubmitted) %></td>
+              <td class="text-center text-muted border"><%= convertDate(thisStudent.assignmentTheory104[(thisStudent.assignmentTheory104.length) - 1].dateSubmitted) %></td>
               
             </tr>
         
@@ -124,11 +124,11 @@
             
            <tr>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory105[(thisStudent.assignmentTheory105.length) - 1].subjectName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory105[(thisStudent.assignmentTheory105.length) - 1].subjectName %></td>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory105[(thisStudent.assignmentTheory105.length) - 1].chapterName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory105[(thisStudent.assignmentTheory105.length) - 1].chapterName %></td>
               
-              <td class="text-center border"><%= convertDate(thisStudent.assignmentTheory105[(thisStudent.assignmentTheory105.length) - 1].dateSubmitted) %></td>
+              <td class="text-center text-muted border"><%= convertDate(thisStudent.assignmentTheory105[(thisStudent.assignmentTheory105.length) - 1].dateSubmitted) %></td>
               
             </tr>
         
@@ -139,11 +139,11 @@
             
            <tr>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory106[(thisStudent.assignmentTheory106.length) - 1].subjectName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory106[(thisStudent.assignmentTheory106.length) - 1].subjectName %></td>
               
-              <td class="text-center border"><%= thisStudent.assignmentTheory106[(thisStudent.assignmentTheory106.length) - 1].chapterName %></td>
+              <td class="text-center text-muted border"><%= thisStudent.assignmentTheory106[(thisStudent.assignmentTheory106.length) - 1].chapterName %></td>
               
-              <td class="text-center border"><%= convertDate(thisStudent.assignmentTheory106[(thisStudent.assignmentTheory106.length) - 1].dateSubmitted) %></td>
+              <td class="text-center text-muted border"><%= convertDate(thisStudent.assignmentTheory106[(thisStudent.assignmentTheory106.length) - 1].dateSubmitted) %></td>
               
             </tr>
         
@@ -182,7 +182,7 @@
               
               <td colspan="3" class="fw-bold fs-5 bgColor border bg-light text-center">
                   
-                  <i class="fas fa-user-check"></i> Verify assignment </td>
+                  <i class="fas fa-user-check text-dark"></i> Verify assignment </td>
               
             </tr>
             
@@ -193,14 +193,14 @@
                 <tr>
                     
                     <td colspan="3"><a href="stdScoreboard" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2"></i> <span class="myLink"> Check your assignment record...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check your assignment record...</span></a></td>
                     
                 </tr>
                 
                 <tr>
                     
                     <td colspan="3"><a href="stdTopPerformers" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2"></i> <span class="myLink"> Check other who answer assignment...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check other who answer assignment...</span></a></td>
                     
                 </tr>
 
@@ -222,9 +222,9 @@
               
               <tr>
               
-              <td colspan="5" class="fw-bold fs-6 bgColor border bg-light text-center mb-2">
+              <td colspan="5" class="fw-bold fs-6 bgColor border bg-light mb-2">
                   
-                  <i class="fas fa-user-friends bgColor"></i> Who test today </td>
+                  <i class="fas fa-user-friends text-dark ps-2"></i> List of students who test today </td>
               
             </tr>
             
@@ -265,19 +265,19 @@
              <tr>
                           
                           
-                          <td class="border ps-3" >
+                          <td class="border text-muted ps-3" >
           
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
                           
-                          <td class="border ps-3"> <%= Students[i].fname %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].fname %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].address %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].address %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory[k].subjectName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory[k].subjectName %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory[k].chapterName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory[k].chapterName %> </td>
         
                         </tr>
         
@@ -301,19 +301,19 @@
              <tr>
                           
                           
-                          <td class="border ps-3" >
+                          <td class="border text-muted ps-3" >
           
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
                           
-                          <td class="border ps-3"> <%= Students[i].fname %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].fname %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].address %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].address %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory102[k].subjectName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory102[k].subjectName %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory102[k].chapterName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory102[k].chapterName %> </td>
         
                         </tr>
         
@@ -336,19 +336,19 @@
              <tr>
                           
                           
-                          <td class="border ps-3" >
+                          <td class="border text-muted ps-3" >
           
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
                           
-                          <td class="border ps-3"> <%= Students[i].fname %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].fname %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].address %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].address %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory103[k].subjectName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory103[k].subjectName %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory103[k].chapterName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory103[k].chapterName %> </td>
         
                         </tr>
         
@@ -371,19 +371,19 @@
              <tr>
                           
                           
-                          <td class="border ps-3" >
+                          <td class="border text-muted ps-3" >
           
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
                           
-                          <td class="border ps-3"> <%= Students[i].fname %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].fname %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].address %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].address %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory104[k].subjectName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory104[k].subjectName %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory104[k].chapterName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory104[k].chapterName %> </td>
         
                         </tr>
         
@@ -407,19 +407,19 @@
              <tr>
                           
                           
-                          <td class="border ps-3" >
+                          <td class="border text-muted ps-3" >
           
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
                           
-                          <td class="border ps-3"> <%= Students[i].fname %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].fname %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].address %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].address %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory105[k].subjectName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory105[k].subjectName %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory105[k].chapterName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory105[k].chapterName %> </td>
         
                         </tr>
         
@@ -443,19 +443,19 @@
              <tr>
                           
                           
-                          <td class="border ps-3" >
+                          <td class="border text-muted ps-3" >
           
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
                           
-                          <td class="border ps-3"> <%= Students[i].fname %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].fname %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].address %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].address %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory106[k].subjectName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory106[k].subjectName %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].assignmentTheory106[k].chapterName %> </td>
+                          <td class="border text-muted ps-3"> <%= Students[i].assignmentTheory106[k].chapterName %> </td>
         
                         </tr>
         
