--- a/views/assignmentCheckScore.ejs
+++ b/views/assignmentCheckScore.ejs
@@ -15,7 +15,7 @@
 
 <div class="container">
   
-  <main class="ms-sm-auto px-md-4">
+  <main>
 
  <div class="row">
           
@@ -23,7 +23,7 @@
             
             <div class="d-flex justify-content-between">
             
-            <a href="#" onclick="window.history.back();" class="small text-secondary"> <i class="fas fa-arrow-left bgGradientRed text-white border p-1"></i> Back to List </i> </a>
+            <a href="#" onclick="window.history.back();" class="small text-secondary"> <i class="fas fa-arrow-left pe-2"></i> Back to List </i> </a>
             
             </div>
             
