--- a/views/dca103onlineclasschapter7.ejs
+++ b/views/dca103onlineclasschapter7.ejs
@@ -6,11 +6,13 @@
 		<%- include('layouts/navbar') -%>
 			<!--main container section-->
 			<div class="container">
-				<main class="ms-sm-auto px-md-4">
-					<!--a lane chung lam-->
-					<!--a lane lai ta-->
-					<div class="row">
-<div class="mx-auto shadow-sm rounded px-4 pb-4 mt-3">
+				 <main>
+      
+        <!--a lane lai ta-->
+        
+        <div class="row">
+          
+            <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             
             <div class="d-flex justify-content-between">
             
@@ -20,11 +22,11 @@
             
             </div>
             
-          <div class="mt-0 rounded text-justify">
+          <div class="mt-3 rounded text-justify">
             
             <p class="text-muted fw-light text-center mb-0"> You are Learning : (DCA-103) </p>
             
-            <p class="text-dark text-center fw-light fs-1 mt-1"> <%= chapterTitle  %></p>
+            <p class="text-dark text-center fw-light fs-1 mt-0"> <%= chapterTitle  %></p>
 								<hr>
 								<div class="d-flex justify-content-between m-1">
 									<button type="button" class="btn btn-sm btn-outline-secondary"> Ch-7 (word)</button>
