--- a/views/dca1stSemOldQuestion.ejs
+++ b/views/dca1stSemOldQuestion.ejs
@@ -14,45 +14,45 @@
 
 <div class="container">
 
-    <main class="ms-sm-auto px-md-4">
+    <main>
       
-
-      <!--a lane chung lam-->
-      
-
-        
         <div class="row">
           
-          <div class="mx-auto shadow-sm rounded px-4 pb-4 mt-3">
+          <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             <div>
-            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
+            <a href="#" onclick="window.history.back();" class="small text-secondary"> <i class="fas fa-arrow-left pe-2"></i> Back</i> </a>
             </div>
-            <hr class="w-25 mx-auto text-secondary my-2">
+            <hr class="w-25 mx-auto text-secondary my-1">
           <div class="mt-0 rounded text-justify">
             <p class="text-muted fw-light text-center mb-0"> DCA 1st Semester </p>
             <hr class="w-25 mx-auto text-secondary my-1">
             <h3 class="fw-light fs-1 text-center mt-0 mb-0">  Old Question  <br></h3>
-            
+            </div>
             <hr class="text-muted">
             
             <p class="fw-normal mx-auto" style="max-width: 600px">A chik mite chuan question hlui atang hian 60% vel a lo kal nawn thin an ti a. 
-            A dik chiah lo a nih pawhin a lo chhuak nawn chu a tam thin khawp mai.</p>
-            
-            <div class="list-group text-center mx-auto" style="width: 400px">
-  
-              <a href="/pdfs/101dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1" >DCA-101 : Old Question</a>
+            A dik chiah lo a nih pawhin chhuak nawn chu a tam thin khawp mai. <span class="text-danger small">Chhanna thenkhatah dik lo a awm a,
+            a dik zawk i hriat duh chuan theory lesson-ah i en dawn nia.</span></p>
 
-              <a href="/pdfs/102dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-success mb-1" >DCA-102 : Old Question</a>
+            <div class="list-group text-center mx-auto">
+              
+              <a href="/pdfs/101dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1 mx-auto" style="max-width: 300px">DCA-101 : Old Question</a>
 
-              <a href="/pdfs/103dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-warning mb-1" >DCA-103 : Old Question</a>
+              <a href="/pdfs/102dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-success mb-1 mx-auto" style="max-width: 300px">DCA-102 : Old Question</a>
 
-              <a href="/pdfs/104dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-danger mb-1" >DCA-104 : Old Question</a>
+              <a href="/pdfs/103dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-warning mb-1 mx-auto" style="max-width: 300px">DCA-103 : Old Question</a>
 
-              <a href="/pdfs/105dec2015-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-dark mb-1" >DCA-105 : Old Question</a>
+              <a href="/pdfs/104dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-danger mb-1 mx-auto" style="max-width: 300px">DCA-104 : Old Question</a>
 
-              <a href="/pdfs/106dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1" >DCA-106 : Old Question</a>
+              <a href="/pdfs/105dec2015-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-dark mb-1 mx-auto" style="max-width: 300px">DCA-105 : Old Question</a>
+
+              <a href="/pdfs/106dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1 mx-auto" style="max-width: 300px">DCA-106 : Old Question</a>
   
             </div>
+        
+            </div>
+        
+        </div>
                               
      
     </main>
