--- a/views/dcaDownloadMaterialPage.ejs
+++ b/views/dcaDownloadMaterialPage.ejs
@@ -14,23 +14,26 @@
 
 <div class="container">
 
-    <main class="ms-sm-auto px-md-4">
-      
+    <div class="container">
 
-      <!--a lane chung lam-->
+     <main>
       
-
+        <!--a lane lai ta-->
         
         <div class="row">
           
-          <div class="mx-auto shadow-sm rounded px-4 pb-4 mt-3">
-            <div>
+            <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
+            
+            <div class="d-flex justify-content-between">
+            
             <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
+            
             <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
+            
             </div>
-            <hr class="w-25 mx-auto text-secondary my-2">
-          <div class="mt-0 rounded text-justify">
-            <p class="text-muted fw-light text-center mb-0"> DCA 1st Semester </p>
+            <hr class="w-25 mx-auto text-secondary my-1 mt-3" />
+          <div class="rounded text-justify">
+            <p class="text-muted fw-light text-center mb-0 mt-0"> DCA 1st Semester </p>
             <hr class="w-25 mx-auto text-secondary my-1">
             <h3 class="fw-light fs-1 text-center mt-0 mb-0">  Download Study Materials  <br></h3>
             
@@ -77,6 +80,12 @@
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
 
                                 <a href="dca1stSemSuggestionNote"><button type="button" class="btn btn-link m-2"> Probable Question <i class="fas fa-angle-right"></i></button></a>
+
+                                </div>
+                                
+                                <div class=" col-lg-3 col-md-6 col-sm-6"> 
+
+                                <a href="dca1stSemOldQuestion"><button type="button" class="btn btn-link m-2"> Old Question <i class="fas fa-angle-right"></i></button></a>
 
                                 </div>
                                 
