--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -25,7 +25,7 @@
             
             <div class="d-flex justify-content-between">
             
-            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home bgGradientRed text-white border p-1"></i> Dashboard</i> </a>
+            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
             
             <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
             
@@ -42,7 +42,7 @@
     
       <div class="table-responsive">
         
-        <table class="table table-sm shadow-sm mt-3">
+        <table class="table table-sm shadow-sm mt-4">
           
           <thead>
             
@@ -56,7 +56,7 @@
             
             <tr class="text-center border bg-white orangeColor">
               
-              <th class="fw-normal  border small"> Sl Nos.</th>
+              <th class="fw-normal  border small"> Sl</th>
               
               <th class="fw-normal  border small"> Name of Student</th>
               
@@ -64,11 +64,11 @@
               
               <th class="fw-normal  border small"> Address</th>
               
-              <th class="fw-normal  border small"> Check his/her assignment </th>
+              <th class="fw-normal  border small"> Assignment </th>
               
           </thead>
           
-          <tbody class="text-center border bg-white">
+          <tbody class="border bg-white">
             
             <% 
 
@@ -97,20 +97,20 @@
             
              <tr>
                
-                        <td class="border ps-3"> <%= serialNo %> </td>
+                        <td class="border text-center"> <%= serialNo %> </td>
                           
                           
-                          <td class="border ps-3" >
+                          <td class="border ps-2" >
           
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
                           
-                          <td class="border ps-3"> <%= Students[i].fname %> </td>
+                          <td class="border ps-2"> <%= Students[i].fname %> </td>
                           
-                          <td class="border ps-3"> <%= Students[i].address %> </td>
+                          <td class="border ps-2"> <%= Students[i].address %> </td>
                           
-                          <td class="border ps-3">  <a href="/assignment/checkScore/<%= Students[i]._id %>" class="text-muted">
+                          <td class="border ps-2">  <a href="/assignment/checkScore/<%= Students[i]._id %>" class="text-muted">
                            click here... </a></td>
                           
                         </tr>
