--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -13,8 +13,10 @@
 
     <div class="container" style="max-width: 700px">
           <p class="mx-auto text-center mt-3 text-info pb-2 border-bottom">Feel free to contact us</p>
-          <div class="mt-4">jojocomputerinstitute@gmail.com
-    </div>
+          
+          <div class="mt-4"><i class="fas fa-envelope-open-text"></i> - jojocomputerinstitute@gmail.com </div>
+          
+          <div class="mt-4"><i class="fas fa-mobile-alt"></i> - 9612728031, 9612359711 </div>
     </div>
 
   
