--- a/views/dca101welcomepage.ejs
+++ b/views/dca101welcomepage.ejs
@@ -14,7 +14,7 @@
 
 <div class="container">
 
-    <main class="ms-sm-auto px-md-4">
+    <main class="ms-sm-auto">
       
 
       <!--a lane chung lam-->
@@ -23,12 +23,12 @@
         
         <div class="row">
           
-          <div class="mx-auto shadow-sm rounded px-4 pb-4 mt-3">
+          <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             <div>
             <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
             <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
             </div>
-            <hr class="w-25 mx-auto text-secondary my-2">
+            <hr class="w-25 mx-auto text-secondary mt-4 mb-0">
           <div class="mt-0 rounded text-justify">
             <p class="text-muted fw-light text-center mb-0"> DCA-101 : Thuhmahruai </p>
             <hr class="w-25 mx-auto text-secondary my-1">
