--- a/views/dca1semOnlineLessonChapter10.ejs
+++ b/views/dca1semOnlineLessonChapter10.ejs
@@ -14,13 +14,13 @@
 
 <div class="container">
 
-    <main class="ms-sm-auto px-md-4">
+    <main>
       
         <!--a lane lai ta-->
         
         <div class="row">
           
-            <div class="mx-auto shadow-sm rounded px-4 pb-4 mt-3">
+            <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             
             <div class="d-flex justify-content-between">
             
@@ -30,13 +30,14 @@
             
             </div>
             
-          <div class="mt-0 rounded text-justify">
+          <div class="mt-3 rounded text-justify">
             
             <p class="text-muted fw-light text-center mb-0"> You are Learning : (DCA-101) </p>
             
-            <p class="text-dark text-center fw-light fs-1 mt-1"> <%= chapterTitle  %></p>
+            <p class="text-dark text-center fw-light fs-1 mt-0"> <%= chapterTitle  %></p>
             
             <hr>
+                 
                         
                           <div class="d-flex justify-content-between m-1">
                             
