--- a/views/dca1stSemGuidebook.ejs
+++ b/views/dca1stSemGuidebook.ejs
@@ -14,46 +14,45 @@
 
 <div class="container">
 
-    <main class="ms-sm-auto px-md-4">
+<main>
       
-
-      <!--a lane chung lam-->
-      
-
-        
         <div class="row">
           
-          <div class="mx-auto shadow-sm rounded px-4 pb-4 mt-3">
+          <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             <div>
-            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
+            <a href="#" onclick="window.history.back();" class="small text-secondary"> <i class="fas fa-arrow-left pe-2"></i> Back</i> </a>
             </div>
-            <hr class="w-25 mx-auto text-secondary my-2">
+            <hr class="w-25 mx-auto text-secondary my-1">
           <div class="mt-0 rounded text-justify">
             <p class="text-muted fw-light text-center mb-0"> DCA 1st Semester </p>
             <hr class="w-25 mx-auto text-secondary my-1">
             <h3 class="fw-light fs-1 text-center mt-0 mb-0">  Guidebook  <br></h3>
-            
+            </div>
             <hr class="text-muted">
             
             <p class="fw-normal mx-auto" style="max-width: 600px">Guidebook hi Jojo Computer Institute-in kan zirlaite tana kan siam a ni. Book reference 
             atangin zir nuam tur tawka tawiin kan la khawm a ni.</p>
             
             
-            <div class="list-group text-center mx-auto" style="width: 400px">
+            <div class="list-group text-center mx-auto">
   
-              <a href="/pdfs/dca_101.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1" >DCA-101 : Download Guidebook</a>
+              <a href="/pdfs/dca_101.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1 mx-auto" style="max-width: 300px">DCA-101 : Download Guidebook</a>
 
-              <a href="/pdfs/dca_102.pdf" class="list-group-item list-group-item-action list-group-item-success mb-1" >DCA-102 : Download Guidebook</a>
+              <a href="/pdfs/dca_102.pdf" class="list-group-item list-group-item-action list-group-item-success mb-1  mx-auto" style="max-width: 300px">DCA-102 : Download Guidebook</a>
 
-              <a href="/pdfs/dca_103.pdf" class="list-group-item list-group-item-action list-group-item-warning mb-1" >DCA-103 : Download Guidebook</a>
+              <a href="/pdfs/dca_103.pdf" class="list-group-item list-group-item-action list-group-item-warning mb-1  mx-auto" style="max-width: 300px">DCA-103 : Download Guidebook</a>
 
-              <a href="/pdfs/dca_104.pdf" class="list-group-item list-group-item-action list-group-item-danger mb-1" >DCA-104 : Download Guidebook</a>
+              <a href="/pdfs/dca_104.pdf" class="list-group-item list-group-item-action list-group-item-danger mb-1  mx-auto" style="max-width: 300px">DCA-104 : Download Guidebook</a>
 
-              <a href="/pdfs/dca_105.pdf" class="list-group-item list-group-item-action list-group-item-dark mb-1" >DCA-105 : Download Guidebook</a>
+              <a href="/pdfs/dca_105.pdf" class="list-group-item list-group-item-action list-group-item-dark mb-1  mx-auto" style="max-width: 300px">DCA-105 : Download Guidebook</a>
 
-              <a href="/pdfs/dca_106.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1" >DCA-106 : Download Guidebook</a>
+              <a href="/pdfs/dca_106.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1  mx-auto" style="max-width: 300px">DCA-106 : Download Guidebook</a>
   
             </div>
+            
+             </div>
+        
+        </div>
                               
      
     </main>
