--- a/views/dcatheorywelcomepage.ejs
+++ b/views/dcatheorywelcomepage.ejs
@@ -14,7 +14,7 @@
 
 <div class="container">
 
-    <main class="ms-sm-auto px-md-4">
+    <main class="ms-sm-auto">
       
       <!--a lane chung lam-->
       
@@ -22,12 +22,12 @@
         
         <div class="row bg-white">
           
-            <div class="mx-auto shadow-sm rounded px-4 pb-4 mt-3">
+            <div class="mx-auto shadow-sm rounded px-2 pb-4 mt-2">
             <div>
             <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
             <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
             </div>
-            <hr class="w-25 mx-auto text-secondary my-2">
+            <hr class="w-25 mx-auto text-secondary mt-4 mb-0">
           <div class="mt-0 rounded text-justify">
             <p class="text-muted fw-light text-center mb-0"> Theory Thuhmahruai </p>
             <hr class="w-25 mx-auto text-secondary my-1">
@@ -47,14 +47,14 @@
                     
             <p class="fw-normal px-3">Theory hian <code>mark 50</code>, practical hian <code> mark 50 </code>a pu a. 
             
-            <em>Theory mark 50 hi thendarh leh a ni a. Theory exam-ah mark 40, internal assessment-ah mark 10 tiin.</em> Tuna kan zir tur hi theory exam (<em>mark 40 pu</em>) atana inbuatsaihna chu a ni a; 
-            exam inbuatsaihna a nih rualin uluk taka i
+            <em>Theory mark 50 hi thendarh leh a ni a. Theory exam-ah mark 40, internal assessment-ah mark 10 tiin.</em> Tuna kan zir tur hi theory exam (<em>mark 40 pu</em>) atana inbuatsaihna chu a ni a; a pum puiah lesson 73 a awm a,
+            heng lesson te hi exam inbuatsaihna atana siamsak che kan ni a, chutih rualin uluk taka i
             zir chhuah peih phawt chuan computer knowledge tam tak i neih phah dawn a, i future-ah nasa takin a tanpui dawn che a ni.
             </p>
-            <p class="fw-normal px-3"> Kan sawi tak angin theory-a thil zir hi a ninawm sam em em a, chuvangin kan zirlaite pawh hi tawi te te
+            <p class="fw-normal px-3"> Kan sawi tak angin theory-a thil zir hi a ninawm sam em em a, chuvangin chapter tin hi tawi te te
             leh tlem te te zelin kan siam a ni. 
             Chapter tam tak hi chu a summary ang chauh a ni dawn a ni. Chapter zawng zawng tawpah assignment kan dah zel a, he assignment hi a pawimawh hle a, 
-            chhan vek i tum dawn nia. Assignment question hi a chunga text section-ah a chhanna (answer) a awm zel a, i chhan hmain ngun takin i chhiar
+            chhan vek i tum dawn nia. A chhanna (answer) chu text section khan a awm zel a, i chhan hmain ngun takin i chhiar
             hmasa zel dawn nia.
             </p>
   </div>
@@ -79,7 +79,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         
-                        <span class="text-primary fw-bold"> 1. Fundamental of Computer (DCA-101) </span>
+                        <span class="text-muted fw-normal"> 1. Fundamental of Computer (DCA-101) </span>
                         
                       </button>
                       
@@ -175,7 +175,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         
-                        <span class="text-danger fw-bold"> 2. Operating System (DCA-102) </span>
+                        <span class="text-muted fw-normal"> 2. Operating System (DCA-102) </span>
                       
                       </button>
                       
@@ -278,7 +278,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                        
-                       <span class="text-success fw-bold"> 3. Office Automation Software (DCA-103) </span>
+                       <span class="text-muted fw-normal"> 3. Office Automation Software (DCA-103) </span>
                         
                       </button>
                       
@@ -438,7 +438,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                        
-                          <span class="text-info fw-bold"> 4. Internet Technology (DCA-104) </span>
+                          <span class="text-muted fw-normal"> 4. Internet Technology (DCA-104) </span>
                         
                       </button>
                       
@@ -511,7 +511,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                        
-                        <span class="text-dark fw-bold">5. Computer Graphics (DCA-105) </span>
+                        <span class="text-muted fw-normal">5. Computer Graphics (DCA-105) </span>
                         
                       </button>
                       
@@ -626,7 +626,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                        
-                          <span class="text-primary fw-bold"> 6. Desktop Publishing (DCA-106) </span>
+                          <span class="text-muted fw-normal"> 6. Desktop Publishing (DCA-106) </span>
                         
                       </button>
                       
