--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
         
     <div class="mission-header mt-4 p-3 pb-md-4 mx-auto text-center">
     <h1 class="display-6 fw-normal pb-2">Objective</h1>
-    <p class="fs-5 text-muted">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atanga pawha thiam taka an lo inzir theihna tura duan a ni.</p>
+    <p class="fs-5 text-muted objective">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atanga pawha thiam taka an lo inzir theihna tura duan a ni.</p>
     </div>
       
     </main>
@@ -38,7 +38,7 @@
         
     <div class="row">
             
-            <div class="fs-2 text-secondary fw-light text-center pb-2"> A smarter way to learn dca courses </div>
+            <div class="fs-2 text-secondary fw-light text-center pb-2 smarterFont"> A smarter way to learn dca courses </div>
           
           <div class="mx-auto m-3 col-lg-4 col-md-6 col-xs-12"> 
             
@@ -98,7 +98,7 @@
         
     </div>
 
-    <h2 class="display-6 text-center mb-4 mt-4">Compare pricing</h2>
+    <h2 class="display-6 text-center mb-4 mt-4">Website pricing</h2>
     <div class="table-responsive">
       <table class="table text-center">
         <thead>
@@ -126,7 +126,7 @@
       </table>
     </div>
     
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <footer class="pt-4 my-md-4 pt-md-4 border-top">
     <div class="row">
       <div class="col-6 col-md">
         <h5>About</h5>
