--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -69,7 +69,7 @@
           
           <% if(loggedIn) { %>
           
-          <li class="nav-item dropdown ms-2">
+          <li class="nav-item dropdown">
           
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               
