--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -23,15 +23,15 @@
        <!-- --------------latest score------------------ -->
     <div class="row">
         
-      <div class="table-responsive mt-2 mb-2 col-lg-6 col-md-6 col-xs-12">
+      <div class="table-responsive mt-4 mb-2 col-lg-6 col-md-6 col-xs-12">
         
-        <table class="table table-sm table-striped table-hover shadow-sm mx-auto" style="max-width:500px">
+        <table class="table table-sm table-hover shadow-sm mx-auto" style="max-width:500px">
           
           <thead>
               
              <tr>
               
-              <td colspan="3" class="fw-bold fs-5 bgColor bg-light border text-center">
+              <td colspan="3" class="fw-normal fs-6 bgColor bg-light border text-center">
                   
                   <i class="fas fa-clock text-dark"></i> Your latest record </td>
               
@@ -172,7 +172,7 @@
       </div>
       
       
-      <div class="table-responsive mb-2 mt-2 col-lg-6 col-md-6 col-xs-12">
+      <div class="table-responsive mb-2 mt-4 col-lg-6 col-md-6 col-xs-12">
         
         <table class="table table-sm bg-white shadow-sm mx-auto" style="max-width:500px">
           
@@ -180,7 +180,7 @@
               
              <tr>
               
-              <td colspan="3" class="fw-bold fs-5 bgColor border bg-light text-center">
+              <td colspan="3" class="fw-normal fs-6 bgColor border bg-light text-center">
                   
                   <i class="fas fa-user-check text-dark"></i> Verify assignment </td>
               
@@ -216,13 +216,13 @@
         
       <div class="table-responsive">
         
-        <table class="table table-sm table-striped table-hover shadow-sm">
+        <table class="table table-sm mt-4 table-hover shadow-sm">
           
           <thead>
               
               <tr>
               
-              <td colspan="5" class="fw-bold fs-6 bgColor border bg-light mb-2">
+              <td colspan="5" class="fw-normal fs-6 bgColor border bg-light mb-2">
                   
                   <i class="fas fa-user-friends text-dark ps-2"></i> List of students who test today </td>
               
