--- a/views/stdScoreboard.ejs
+++ b/views/stdScoreboard.ejs
@@ -19,11 +19,11 @@
 
  <div class="row">
           
-           <div class="mx-auto px-4 mt-3">
+           <div class="mx-auto px-2 mt-3">
             
             <div class="d-flex justify-content-between">
             
-            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home bgGradientRed text-white border p-1"></i> Dashboard</i> </a>
+            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
             
             <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
             
@@ -38,7 +38,7 @@
      
       <!-- --------------assignment record table------------------ -->
     
-      <div class="shadow-sm mx-auto fs-4 fw-normal mb-0 text-center border rounded p-2 mt-3 mb-3" style="max-width: 300px"> 
+      <div class="shadow-sm mx-auto fs-5 fw-normal mb-0 text-center border rounded p-2 mt-4 mb-2" style="max-width: 300px"> 
       
       Assignment Record Table </div>
       
